--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
     </table>
 </section>
 <section id="eat" class="post-card-container">
-    <div class="eat-item post card">
+    <span class="section-title"> Food you need to try!</span>
+        <div class="eat-item post card">
         <div class="image-container">
             <img src="images/Burger.jpg" alt="burger" widht="150" height="90">
         </div>
@@ -150,7 +151,24 @@
         <button>read post cards</button>
     </div>
 </section>
+<section id="see">
+    <span class="section-title">Places you want to see!</span>
+    <div class="buttons-section">
+        <span class="student-name">Stefan</span>
+        <span class="student-name">Simona</span>
+        <span class="student-name">Veronika</span>
+        <span class="student-name">Marijana</span>
+        <span class="student-name">Ivana</span>
+    </div>
+<div class="student-section stefan-section"></div>
+<div class="student-section simona-section"></div>
+<div class="student-section Veronika-section"></div>
+<div class="student-section Marijana-section"></div>
+<div class="student-section Ivana-section"></div>
+</section>
 
+</section>
+</section>
 
 </ul>
 
