Ivana, added see postcards

--- a/index.html
+++ b/index.html
@@ -164,7 +164,44 @@
 <div class="student-section simona-section"></div>
 <div class="student-section Veronika-section"></div>
 <div class="student-section Marijana-section"></div>
-<div class="student-section Ivana-section"></div>
+<div class="student-section Ivana-section">
+<div class="see post card">
+    <div class="image-container">
+        <img src="images/Belgrade.jpg" alt="Belgrade" widht="150" height="90">
+    </div>
+    <div class="logo-container">
+    <h2>Belgrade </h2>
+    <p>Belgrade is a sercet little diamond! OK, when you arrive there you realise that you are not in the most beautiful city of the world, but it is a city that worths to be visited. It is a city full of history, wonderful and hospitable people, great restaurants and nice nightlife.</p>
+    <button>read post cards</button>
+</div>
+<div class="see post card">
+    <div class="image-container">
+        <img src="images/Bern.jpg" alt="Bern" widht="150" height="90">
+    </div>
+    <div class="logo-container">
+    <h2>Bern </h2>
+    <p>With its UNESCO-listed old town, cathedral, clock tower, fountains and numerous arcades, Bern is one of Switzerland's most beautiful cities. Between all of the sights on offer, the city also offers you plenty of nature and a chance to refresh yourself on the River Aare.</p>
+    <button>read post cards</button>
+</div>
+<div class="see post card">
+    <div class="image-container">
+        <img src="images/lucerne.jpg" alt="lucerne" widht="150" height="90">
+    </div>
+    <div class="logo-container">
+    <h2>lucerne </h2>
+    <p>Lucerne is best-known for the wooden bridge spanning the river to connect the city. The most famous and world's oldest one is the Chapel Bridge dating back to the 14th century. This pedestrians bridge is decorated with pictures representing Lucerne's history.</p>
+    <button>read post cards</button>
+</div>
+<div class="see post card">
+    <div class="image-container">
+        <img src="images/Zagreb.jpg" alt="Zagreb" widht="150" height="90">
+    </div>
+    <div class="logo-container">
+    <h2>Zagreb</h2>
+    <p>As the capital of Croatia, Zagreb has many historical sights, museums, and beautiful green oases that would delight any visitor. It is one of the oldest Central European cities and a perfect combination of rich heritage, lively rhythm of street life, and a multitude of attractions that will awaken all your senses.</p>
+    <button>read post cards</button>
+</div>
+
 </section>
 
 </section>
