--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footprints & Moments</title>
     <link rel="icon" type="image/jpg" href="logo.ico.jpg">
+    <link rel="stylesheet" href="main.css" type="text/css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 
     </head>
 
 
 <body>
+    <style>
+        .excercies {
+            display: none;
+        }
+    </style>
    
     <!-- header start header -->
-    <header>
+    <header style="background-color: #bde0fe;"> </header>
         <div class="logo" id="logo">
         <a href="javascript:;">
         <img src="images/welcome.avif"logo" width="200" height="90">
