--- a/index.html
+++ b/index.html
@@ -223,7 +223,21 @@
 </ul>
 
     </main>
-    <footer></footer>
+    <footer>
+        <div class="student-footer-buttons">
+            <span class="student-footer-btn">Marijana</span>
+            <span class="student-footer-btn">Stefan</span>
+            <span class="student-footer-btn">Veronika</span>
+            <span class="student-footer-btn">Simona</span>
+            <span class="student-footer-btn">Ivana</span>
+            </div>
+            <div class="studnet-footer marijana-footer"></div>
+            <div class="studnet-footer stefan-footer"></div>
+            <div class="studnet-footer veronika-footer"></div>
+            <div class="studnet-footer simona-footer"></div>
+            <div class="studnet-footer ivana-footer"></div>
+
+    </footer>
 
 </body>
 </html> 
